--- a/Resources/migration.yml
+++ b/Resources/migration.yml
@@ -122,6 +122,7 @@ CP14FlowersYellow: CP14Dayflin
 
 #2024-11-03
 CP14OldLantern: CP14CrystalLamp
+CP14ClothingRingIceFloor: null
 
 # <---> CrystallPunk migration zone end
 
