wallmount crystal lamps

--- a/Resources/Prototypes/_CP14/Entities/Actions/Spells/mana_gift.yml
+++ b/Resources/Prototypes/_CP14/Entities/Actions/Spells/mana_gift.yml
@@ -28,6 +28,7 @@
     whitelist:
       components:
       - CP14MagicEnergyContainer
+      - CP14MagicEnergyCrystalSlot
     useDelay: 5
     itemIconStyle: BigAction
     interactOnMiss: false
