--- a/Resources/Prototypes/_CP14/Entities/Objects/Tools/flashlight.yml
+++ b/Resources/Prototypes/_CP14/Entities/Objects/Tools/flashlight.yml
@@ -5,7 +5,7 @@
   id: CP14CrystalLamp
   abstract: true
   name: crystal lamp
-  description: A lamp with a bright fluorescent crystal and a cap to cover its glow. Convenient for traveling
+  description: A device that converts energy from crystals into a source of directional light.  Convenient for traveling
   categories: [ ForkFiltered ]
   components:
   - type: Sprite
@@ -43,7 +43,7 @@
     color: "#FFFFFF"
     mask: /Textures/_CP14/Effects/LightMasks/crystal_cone.png
     autoRot: true
-    energy: 2
+    energy: 3
     radius: 6
   - type: Appearance
   - type: GenericVisualizer
@@ -116,4 +116,4 @@
       shader: unshaded
   - type: PointLight
     color: "#d68f4d"
-    energy: 4
+    energy: 5
