--- a/Resources/Prototypes/Entities/Markers/construction_ghost.yml
+++ b/Resources/Prototypes/Entities/Markers/construction_ghost.yml
@@ -4,6 +4,7 @@
   categories: [ HideSpawnMenu ]
   components:
   - type: Sprite
+    drawdepth: Mobs #CP14
     color: '#3F38'
   - type: ConstructionGhost
   - type: Clickable
