--- a/Resources/Prototypes/_CP14/Recipes/Construction/Graphs/Furniture/bonfire.yml
+++ b/Resources/Prototypes/_CP14/Recipes/Construction/Graphs/Furniture/bonfire.yml
@@ -35,3 +35,22 @@
     - node: CP14WallmountTorch
       entity: CP14WallmountTorch
 
+
+
+- type: constructionGraph
+  id: CP14WallmountLampEmpty
+  start: start
+  graph:
+    - node: start
+      actions:
+        - !type:DestroyEntity {}
+      edges:
+        - to: CP14WallmountLampEmpty
+          steps:
+            - material: CP14CopperBar
+              amount: 3
+              doAfter: 3
+              
+    - node: CP14WallmountLampEmpty
+      entity: CP14WallmountLampEmpty
+
