--- a/Resources/Prototypes/_CP14/Entities/Markers/Spawners/Random/Loot/spawners.yml
+++ b/Resources/Prototypes/_CP14/Entities/Markers/Spawners/Random/Loot/spawners.yml
@@ -42,7 +42,7 @@
         - id: CP14DyeBlack
       - id: CP14EnergyCrystalSmall
       - id: CP14Bucket
-      - id: CP14OldLantern
+      - id: CP14CrystalLamp
       - id: CP14Scissors
       - id: CP14BaseSharpeningStone
       - id: CP14Rope
