--- a/Resources/migration.yml
+++ b/Resources/migration.yml
@@ -121,7 +121,7 @@ CP14GatherableFlowersYellow: CP14GatherableDayflin
 CP14FlowersYellow: CP14Dayflin
 
 #2024-11-03
-CP14OldLantern: CP14CrystalLamp
+CP14OldLantern: CP14CrystalLampBlueEmpty
 CP14ClothingRingIceFloor: CP14ClothingRingManaGift
 
 # <---> CrystallPunk migration zone end
