--- a/Resources/migration.yml
+++ b/Resources/migration.yml
@@ -119,6 +119,11 @@ CP14SpawnPointMerchant: CP14SpawnPointBanker
 #2024-10-27
 CP14GatherableFlowersYellow: CP14GatherableDayflin
 CP14FlowersYellow: CP14Dayflin
+
+#2024-11-03
+CP14OldLantern: CP14CrystalLampBlueEmpty
+CP14ClothingRingIceFloor: CP14ClothingRingManaGift
+
 # <---> CrystallPunk migration zone end
 
 
