--- a/Resources/Prototypes/_CP14/Entities/Mobs/NPC/dinosaurs.yml
+++ b/Resources/Prototypes/_CP14/Entities/Mobs/NPC/dinosaurs.yml
@@ -106,6 +106,8 @@
         variation: 0.125
   - type: SoundWhileAlive
   - type: FloorOcclusion
+  - type: StealTarget
+    stealGroup: CP14Dino
 
 - type: entity
   id: CP14MobDinoSmallHydra
