--- a/Resources/Prototypes/_CP14/Entities/Mobs/NPC/monster.yml
+++ b/Resources/Prototypes/_CP14/Entities/Mobs/NPC/monster.yml
@@ -92,6 +92,8 @@
   - type: Tag
     tags:
       - FootstepSound
+  - type: StealTarget
+    stealGroup: CP14Mole
 
 - type: entity
   id: CP14ActionMoleSpellSubterraneanLeap
