--- a/Resources/Prototypes/_CP14/LockCategories/LockCategory.yml
+++ b/Resources/Prototypes/_CP14/LockCategories/LockCategory.yml
@@ -76,8 +76,12 @@
   id: TavernDorms5
   complexity: 3
 
-# Alchemy 
+# Mercenary 
 
 - type: CP14LockCategory
   id: Alchemy
+  complexity: 5
+
+- type: CP14LockCategory
+  id: Blacksmith
   complexity: 5
