--- a/Resources/Prototypes/_CP14/Roles/play_time_tracker.yml
+++ b/Resources/Prototypes/_CP14/Roles/play_time_tracker.yml
@@ -7,6 +7,9 @@
   id: CP14JobAlchemist
 
 - type: playTimeTracker
+  id: CP14JobBlacksmith
+
+- type: playTimeTracker
   id: CP14JobInnkeeper
 
 - type: playTimeTracker
