--- a/Resources/Prototypes/_CP14/StatusIcon/job.yml
+++ b/Resources/Prototypes/_CP14/StatusIcon/job.yml
@@ -60,3 +60,11 @@
     sprite: /Textures/_CP14/Interface/Misc/job_icons.rsi
     state: Banker
   jobName: cp14-job-name-banker
+
+- type: jobIcon
+  parent: CP14JobIcon
+  id: CP14JobIconBlacksmith
+  icon:
+    sprite: /Textures/_CP14/Interface/Misc/job_icons.rsi
+    state: Blacksmith
+  jobName: cp14-job-name-blacksmith
