--- a/Resources/Prototypes/_CP14/Loadouts/role_loadouts.yml
+++ b/Resources/Prototypes/_CP14/Loadouts/role_loadouts.yml
@@ -41,6 +41,20 @@
   - CP14GeneralTrinkets
 
 - type: roleLoadout
+  id: JobCP14Blacksmith
+  groups:
+  - CP14GeneralHead
+  - CP14GeneralEyes
+  - CP14GeneralMask
+  - CP14BlacksmithCloak
+  - CP14GeneralGloves
+  - CP14GeneralShirt
+  - CP14GeneralPants
+  - CP14GeneralShoes
+  - CP14GeneralBack
+  - CP14GeneralTrinkets
+
+- type: roleLoadout
   id: JobCP14Captain
   groups:
   - CP14CaptainHead #
